
ChangeLog
 [ + added, - removed, * changed ]
 + 30May2013 First part of the OpenCL instrumentation
             Added tests to check clock resolution
 + 23May2013 Emitted pid(), ppid() and fork depth in the tracefile
             getrusage and mallinfo are emitted to 0 at the beginning
             Fixed make check
             Dyninst/fork instrumentation, free parent's buffer
             Trace initialization state / delimited even for Extrae_init
 * 21May2013 Get performance counters at flushes
 + 17May2013 Added extrae_define_event_type to be callable by Fortran
             Added sequential example of pi, including the above call.
 * 16May2013 Restart sampling once leaving the fork call as child
             Renamed devices and streams in CUDA traces so that their
               numbering goes from 1 to N instead of 0 to N-1.
             Support for time suffixes ns, ms, and us.
             Instrumented MPI_Comm_free.
 * 13May2013 Added instrumentation for #pragma omp for ordered in GNU
             Removed useless warnings when instrumenting OpenMP using preload
 * 10May2013 Improved support for fork+wait+waitpid+system+exec calls
               using dyninst launcher
 * 09May2013 Require binutils if using unwind or compiling in linuxos
               (provides backtrace)
 * 07May2013 Multiple small fixes in the bursty tracing
               Avoided problems when Extrae_shutdown was called
               Emission of MPI others statistics
               MPI communicators minor refactoring
             Removed erroneous emission of hardware counters when a set is
               about to start
             Added installation of extrae_module.f
             OpenMP snippets were misused in DynInst, use the appropriate
             Add cross-compiled librt for ARM architectures if available
 + 02May2013 Added support for CUDA5+CUPTI
             Changed substitute script to use sed -i
 + 30Apr2013 Added support for cudaDeviceReset.