@@ -3,12 +3,14 @@ include $(top_srcdir)/PATHS
 check_PROGRAMS = \
  auto-init-fini \
  define_event_type_gen_pcf \
+ define_event_type_gen_pcf_f \
  ompss-codelocation \
  ompss-codelocation-2
 
 TESTS = \
  auto-init-fini.sh \
  define_event_type_gen_pcf.sh \
+ define_event_type_gen_pcf_f.sh \
  ompss-codelocation.sh \
  ompss-codelocation-2.sh
 
@@ -37,6 +39,10 @@ auto_init_fini_LDFLAGS = -L$(TRACER_DIR) -lseqtrace $(HWC_LINKER_FLAGS)
 define_event_type_gen_pcf_SOURCES = define_event_type_gen_pcf.c
 define_event_type_gen_pcf_CFLAGS = -I$(INCLUDE_DIR) -I$(SRC_DIR)/common
 define_event_type_gen_pcf_LDFLAGS = -L$(TRACER_DIR) -lseqtrace $(HWC_LINKER_FLAGS)
+
+define_event_type_gen_pcf_f_SOURCES = $(INCLUDE_DIR)/extrae_module.f90 define_event_type_gen_pcf.f90
+define_event_type_gen_pcf_f_FCFLAGS = -I$(INCLUDE_DIR) -I$(SRC_DIR)/common
+define_event_type_gen_pcf_f_LDFLAGS = -L$(TRACER_DIR) -lseqtrace $(HWC_LINKER_FLAGS)
 
 ompss_codelocation_SOURCES = ompss-codelocation.c
 ompss_codelocation_CFLAGS = -I$(INCLUDE_DIR) -I$(SRC_DIR)/common
