@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 06Jun2013 Added check for Extrae fortran API / define_event_type
  + 30May2013 First part of the OpenCL instrumentation
              Added tests to check clock resolution
  + 23May2013 Emitted pid(), ppid() and fork depth in the tracefile
